--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -39,13 +39,13 @@
 				<div class="menu-list">
 					<ul class="menu-content collapse out" id="menu-content">
 						<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
-							<a href="javascript: void(0);">Account Settings <i class="material-icons arrow">keyboard_arrow_down</i></a>
+							<a href="javascript: void(0);">Account Settings <i class="material-icons arrow">keyboard_arrow_up</i></a>
 						</li>
 						<ul class="sub-menu collapse" id="account">
 							<li><a class="Password" data-toggle="modal" data-target="#changePassword"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>
 						</ul>
 						<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
-							<a href="javascript: void(0);">Update Contact Info <i class="material-icons arrow">keyboard_arrow_down</i></a>
+							<a href="javascript: void(0);">Update Contact Info <i class="material-icons arrow">keyboard_arrow_up</i></a>
 						</li>
 						<ul class="sub-menu collapse" id="contact">
 							<li><a class="Phone"><img alt="" src="~/Content/img/phone.png"> Phone</a></li>
@@ -64,7 +64,7 @@
 					<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
 						<a href="javascript: void(0);">
 							Account Settings <i class="material-icons arrow">
-								keyboard_arrow_down
+								keyboard_arrow_up
 							</i>
 						</a>
 					</li>
@@ -75,7 +75,7 @@
 					<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
 						<a href="javascript: void(0);">
 							Update Contact Info <i class="material-icons arrow">
-								keyboard_arrow_down
+								keyboard_arrow_up
 							</i>
 						</a>
 					</li>
@@ -87,7 +87,7 @@
 					<li class="collapsed" aria-expanded="false" data-target="#payment" data-toggle="collapse">
 						<a href="javascript: void(0);">
 							Payment Details <i class="material-icons arrow">
-								keyboard_arrow_down
+								keyboard_arrow_up
 							</i>
 						</a>
 					</li>
