--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Login.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
 		@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
 	</div>
 	<div class="form-group">
-		<label>Password @Html.ActionLink("Forgot Password?", "ForgotPassword", "Account", new { controller = "Account" }, new { @class = "forgot-link float-right forgot" })</label>
+		<label>Passwordddddddd @Html.ActionLink("Forgot Password?", "ForgotPassword", "Account", new { controller = "Account" }, new { @class = "forgot-link float-right forgot" })</label>
 		@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
 
 		@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
