--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
@@ -7,7 +7,7 @@
 <div class="col-md-12 p-0" id="forgotPasswordForm">
         <label for="Email" class="col-md-2 control-label">Email</label>
         <div class="col-md-12">
-            <input type="text" id="Email" class="form-control" required />
+            <input type="text" id="Email" class="form-control" autocomplete="off" required />
             <label class="emailError" style="color:red; display:none">Invalid Email Address</label>
         </div>
     <div class="form-group">
